register now asks first and second name flag fix in register view preferences are readable for authenticated (bc anonymous)

--- a/client/app/views/register/register.style.scss
+++ b/client/app/views/register/register.style.scss
@@ -18,4 +18,14 @@
     margin-top: 8rem;
   }
 
+  .spacer {
+    margin-right: 2rem;
+  }
+
+  .flag {
+    height: 0.9rem;
+    width: 1.3rem;
+  }
+
+
 }
